# rust_data_pipeline

./: Cargo.toml  README.md  customer_tableau.twbx  ~customer_tableau__54792.twbr
src/: analysis.rs  ingestion.rs  main.rs  storage.rs
